# ORB-SLAM3-ROS2-Docker

./: .gitignore  Dockerfile  docker-compose.yml
container_root/: .gitconfig
container_root/.ssh/: known_hosts
container_root/install/map_merger/lib/map_merger/: map_merger_node
container_root/install/map_merger/share/map_merger/: package.bash  package.dsv  (+3 more)
container_root/install/orb_slam3_planner/share/orb_slam3_planner/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
container_root/install/orb_slam3_planner/share/orb_slam3_planner/launch/: orb_slam3_system.launch.py
container_root/log/: latest_build
map_merger/: package.xml  setup.cfg  setup.py
map_merger/map_merger/: global_map_manager.py  map_merger_node.py
orb_slam3_planner/: setup.cfg  setup.py
orb_slam3_planner/launch/: orb_slam3_system.launch.py
orb_slam3_planner/orb_slam3_planner/: drone_controller_module.py  global_map_visualizer.py  main_node.py  map_builder_module.py  map_merger_node.py  multi_robot_visualizer.py  planner_module.py  robot_calibration_tool.py  shared_map_builder_node.py
orb_slam3_ros2_wrapper/: CMakeLists.txt
orb_slam3_ros2_wrapper/include/orb_slam3_ros2_wrapper/: base_slam_node.hpp  orb_slam3_interface.hpp
orb_slam3_ros2_wrapper/launch/: multi_robot.launch.py  rgbd.launch.py  unirobot.launch.py
orb_slam3_ros2_wrapper/params/: rgbd-ros-params.yaml
orb_slam3_ros2_wrapper/src/: base_slam_node.cpp
orb_slam3_ros2_wrapper/src/rgbd/: rgbd-slam-node.cpp  rgbd-slam-node.hpp
slam_msgs/: CMakeLists.txt
slam_msgs/msg/: TrackingLost.msg
(+9 files in other folders)
