<?xml version="1.0"?>
<package format="3">
  <name>orb_slam3_planner</name>
  <version>0.0.1</version>
  <description>Frontier-based motion planner for ORB-SLAM3 robot</description>
  <maintainer email="nadavcherry@gmail.com">Nadav</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>slam_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
